# nuklearPy

./: .gitignore  .isort.cfg  LICENSE  MANIFEST.in  build_library.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: changelog.rst
src/nuklear/: __init__.py  color.py  library.py  metadata.py  types.py
src/package/: __init__.py
test/: test_color.py  test_metadata.py  test_structs.py
