[metadata]
name = nuklear
url = URL
download_url = DOWNLOAD_URL
project_urls =
    Source = SOURCE_URL
    Documentation = DOCUMENTATION_URL
    Issue Tracker = ISSUES_URL
author = AUTHOR
author_email = AUTHOR_EMAIL
maintainer = MAINTAINER
maintainer_email = MAINTAINER_EMAIL
classifiers =
    Development Status :: 1 - Planning
;    Development Status :: 2 - Pre-Alpha
;    Development Status :: 3 - Alpha
;    Development Status :: 4 - Beta
;    Development Status :: 5 - Production/Stable

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
license = MIT
license_file = LICENSE
description = DESCRIPTION
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    KEYWORDS
platforms = any
;provides =
;requires =
;obsoletes =

[options]
;zip_safe =
;install_requires = # Defined in setup.py until PyCharm can detect requirements here
python_requires = >=3.8
;scripts =
;eager_resources =
;dependency_links =
include_package_data = True
packages = find:
package_dir = =src
;namespace_packages =
;py_modules =

;[options.extras_require]
;tests = # Defined in setup.py until PyCharm can detect requirements here

;[options.entry_points]

[options.packages.find]
where = src

[options.package_data]
package = data/*

;[options.exclude_package_data]

;[options.data_files]
