[metadata]
name = nuklear
version = 0.0.1
url = https://github.com/Mimer29or40/nuklearPy
download_url = https://github.com/Mimer29or40/nuklearPy/releases
project_urls =
    Source = https://github.com/Mimer29or40/nuklearPy
    Documentation = https://github.com/Mimer29or40/nuklearPy/wiki
    Issue Tracker = https://github.com/Mimer29or40/nuklearPy/issues
author = Ryan Smith
author_email = Ryan.Smith.Dev.Things@gmail.com
;maintainer = MAINTAINER
;maintainer_email = MAINTAINER_EMAIL
classifiers =
    Development Status :: 1 - Planning
;    Development Status :: 2 - Pre-Alpha
;    Development Status :: 3 - Alpha
;    Development Status :: 4 - Beta
;    Development Status :: 5 - Production/Stable

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
license = MIT
license_file = LICENSE
description = A ctypes-based wrapper for Nuklear.
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    nuklear
platforms = any
;provides =
;requires =
;obsoletes =

[options]
;zip_safe =
;install_requires = # Defined in setup.py until PyCharm can detect requirements here
python_requires = >=3.8
;scripts =
;eager_resources =
;dependency_links =
include_package_data = True
packages = find:
package_dir = =src
;namespace_packages =
;py_modules =

;[options.extras_require]
;tests = # Defined in setup.py until PyCharm can detect requirements here

;[options.entry_points]

[options.packages.find]
where = src

[options.package_data]
nuklear = bin/nuklear.dll
          bin/libnuklear.dylib
          bin/wayland/libnuklear.so
          bin/x11/libnuklear.so
          bin/libnuklear.so
          bin/msvcr100.dll
          bin/msvcr110.dll

;[options.exclude_package_data]

;[options.data_files]
